# 3DObjectTracking

M3T/: .gitignore  CMakeLists.txt  build.bat  build_Android.bat  build_HoloLens.bat
M3T/include/m3t/: basic_depth_renderer.h  body.h  camera.h  common.h  detector.h  modality.h  model.h  publisher.h  region_modality.h  region_model.h  renderer.h  renderer_geometry.h  silhouette_renderer.h  viewer.h
M3T/src/: CMakeLists.txt  basic_depth_renderer.cpp  body.cpp  common.cpp  depth_model.cpp  generate_model.cpp  link.cpp  model.cpp  normal_renderer.cpp  normal_viewer.cpp  region_modality.cpp  region_model.cpp  renderer.cpp  renderer_geometry.cpp  silhouette_renderer.cpp  texture_modality.cpp
